@@ -31,6 +31,7 @@ set location(GROUP)     "/glftpd/etc/group"
 #set glftpdlog(EXTERNAL)    "$glroot/ftp-data/logs/glftpd.log"
 #set loginlog(EXTERNAL)     "$glroot/ftp-data/logs/login.log"
 #set sysoplog(EXTERNAL)     "$glroot/ftp-data/logs/sysop.log"
+#set to at least 4096 when having over 10 racers in races
 set max_log_change          2048
 
 # These are the binaries the script will use. They are usually best left
